# jpopsuki-scraping

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
utils/: download.py  processing.py  scraping.py
