[tool.poetry]
name = "jpopsuki-scraping"
version = "1.0.0"
description = ""
authors = ["n0k0m3 <10925298+n0k0m3@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.10.0"
urllib3 = "^1.26.8"
requests = "^2.27.1"
lxml = "^4.7.1"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
